--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     	<a-assets>
 
-        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="transperent video.webm" type="video/webm" transparent="true"></video>
+        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="ufd.webm" type="video/webm" transparent="true"></video>
       </a-assets>
        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
