--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     	<a-assets>
 
-        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="ufd.webm" type="video/webm" transparent="true"></video>
+        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="trt.webm" type="video/webm" transparent="true"></video>
       </a-assets>
        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
@@ -37,7 +37,7 @@
         
         <a-entity mindar-image-target="targetIndex: 0">
 
- <a-video  material="shader: transparent-video;" src="#mivideo" position="0 0 0"  width="1" height="0.552" rotation="0 0 0"  ></a-video>
+ <a-video  material="shader: transparent-video;" src="#mivideo" position="-90 0 0"  width="1" height="0.552" rotation="0 0 0"  ></a-video>
 
    <script> 
 
