--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <a-entity mindar-image-target="targetIndex: 0">
 
- <a-video  material="shader: transparent-video;" src="#mivideo" position="0 0 0"  width="1" height="0.552" rotation="90 0 0"  ></a-video>
+ <a-video  material="shader: transparent-video;" src="#mivideo" position="0 0 0"  width="1" height="0.552" rotation="90"  ></a-video>
 
    <script> 
 
