--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
    <body>
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;"  mindar-image="imageTargetSrc: https://raw.githubusercontent.com/vgandva/rawfile/master/FIVEHUNDRED BACK.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;"  mindar-image="imageTargetSrc: tvc.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     	
     
     	<a-assets>
 
-        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="trt.webm" type="video/webm" transparent="true"></video>
+        <video  id="mivideo" crossOrigin="anonymous" playsinline webkitplaysinline autoplay controls muted  src="mike.webm" type="video/webm" transparent="true"></video>
       </a-assets>
        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
